own_ref_tests/src/tests/failing_tests/immutable_variable.stderr
error[E0596]: cannot borrow `text` as mutable, as it is not declared as mutable
 --> src/tests/failing_tests/immutable_variable.rs:6:5
  |
4 |     let text = "Hello".to_string();
  |         ---- help: consider changing this to be mutable: `mut text`
5 |
6 |     new_own_ref!(mut owned_ref, text);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
  |
  = note: this error originates in the macro `new_own_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
